--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -26,3 +26,8 @@ $font-size-p:    1rem;     // 16px
 $line-height-base:         1.6;
 $space-between-paragraphs: 1.5rem; 
 $space-between-sections:   4rem;
+
+// 6. Graisses (Weights)
+$weight-light:  300;
+$weight-normal: 400;
+$weight-bold:   700;
